[package]
name = "kanye_quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.11", features = ["derive"] }
serde_json = "1.0.2"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
version = "0.10.10"